--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongodb",
+  "name": "learning-mongodb",
   "version": "1.0.0",
   "description": "MongoDB—an open-source, document database—makes it easy to bring up an application stack and start coding. In this course, get started with MongoDB, and learn about the differences between relational and document databases. Kirsten Hunter covers working with the Mongo shell, setting up basic indexing functionality, and building an application in Node.js. Plus, she discusses advanced topics such as indexing, sharding, and replication. To help you grasp the concepts covered in this course, she provides practical exercises in the shell and in Node.js.",
   "main": "index.js",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/reubennn/learning-mongodb/issues"
   },
-  "homepage": "https://github.com/reubennn/learning-mongodb#readme"
+  "homepage": "https://github.com/reubennn/learning-mongodb#readme",
+  "dependencies": {
+    "mongodb": "^3.6.0"
+  }
 }
